--- a/Portfolio/auth.css
+++ b/Portfolio/auth.css
@@ -141,3 +141,11 @@ span {
 .th {
   margin-bottom: 2rem;
 }
+@media (max-width: 992px) {
+  .login-image {
+    display: none;
+  }
+  .line {
+    display: none;
+  }
+}
